--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.pabloquijano.loginpokedex">
+    package="com.pabloquijano.loginpokedex"
+    android:installLocation="preferExternal">
 
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
@@ -20,7 +21,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".MainActivity" />
-        <activity android:name=".LoginActivity" android:theme="@style/AppTheme.Dark"></activity>
+        <activity android:screenOrientation="portrait" android:name=".LoginActivity" android:theme="@style/AppTheme.Dark"></activity>
     </application>
 
 </manifest>
